syntax = "proto3";
option go_package = "./protos";


message OrmOutput{
  // check orm
  bool used = 1;
  // list of all orms
  repeated ORM orms = 2;
}
message ORM{
  //  name of orm
  string name = 1;
  //  version of orm
  string version = 2;
  }

